--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                             MBBCh, MRCGP, MRCS, DO-HNS, DipRCPath
                         </h4>
                     </div>
+                    <div>
+                        <h4>
+                            Languages: English and Welsh (fluent)
+                        </h4>
+                    </div>
                     <div class="subheading mb-5">
                         Croesty Farm, Coychurch Road, Pencoed, Wales, CF35 5LY · 07590 280594 ·
                         <a href="mailto:owen.weeks@wales.nhs.uk">owen.weeks@wales.nhs.uk</a>
