--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div>
                         <h4>
-                            Languages: English and Welsh (fluent)
+                            <span class="text-primary">Languages: English and Welsh (fluent)</span>
                         </h4>
                     </div>
                     <div class="subheading mb-5">
