--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div>
                         <h4>
-                            <span class="text-primary">Languages: English and Welsh (fluent)</span>
+                            Languages: <span class="text-primary">English and Welsh (fluent)</span>
                         </h4>
                     </div>
                     <div class="subheading mb-5">
@@ -59,18 +59,18 @@
                         <a href="mailto:owen.weeks@wales.nhs.uk">owen.weeks@wales.nhs.uk</a>
                     </div>
                     <p class="lead mb-5">
-                        I am a clinician with 14 years experience in the NHS and private sector. 
+                        I am a clinician with 14 years experience in the NHS and private sector. I currently hold
+                        a leadership position as clinical director for urgent primary care at Cwm Taf Morgannwg UHB.
                         My main areas of interest are strategic planning and innovation with a particular 
                         emphasis on remote consultation and collaborative multi-disciplinary working. 
                         I am passionate about improving quality of healthcare both from a clinician and 
                         patient perspective by developing smart, efficient working strategies and utilising 
-                        the latest in point of care testing, remote patient monitoring and machine learning. I am regularly praised
-                        for my inclusive leadership approach. I make a concious effort to meet with colleagues and stakeholders 
-                        to demonstrate my approachability and willingness to listen. My approach to decision making is calculated and
-                        evidence based. By utilising all the available data to guide strategy I ensure that strategic plans provide value.
-                        In addition to clinical skills in primary care and emergency medicine, I am proficient 
-                        in computer programming in Python and have basic HTML skills. 
-                        I am well versed in the main GP patient management systems, Vision, EMIS, Adastra, Heydoc.
+                        the latest in point of care testing, remote patient monitoring and machine learning. I have a balanced 
+                        approach to decision making, which is always evidence based. 
+                        By utilising all the available data to guide strategy, I ensure that outcomes are calculated and provide value. 
+                        In addition to clinical skills in primary care and emergency medicine, 
+                        I am proficient in computer programming in Python and have basic HTML skills. 
+                        I am well versed in the main GP patient management systems, Vision, EMIS, Adastra and Heydoc (private sector).
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
