--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Dr Owen Huw Weeks</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="static/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile mx-auto mb-2" src="static/Owen_face.jpeg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Digital</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">IT Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Prizes</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#memberships">Memberships</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
@@ -59,22 +59,77 @@
                         <a href="mailto:owen.weeks@wales.nhs.uk">owen.weeks@wales.nhs.uk</a>
                     </div>
                     <p class="lead mb-5">
-                        I am a clinician with 14 years experience in the NHS and private sector. I currently hold
-                        a leadership position as clinical director for urgent primary care at Cwm Taf Morgannwg UHB.
+                        <h5>Introduction</h5>
+                        I am a clinician with 15 years experience in the NHS and private sector. I currently hold
+                        a senior leadership position as Medical Director for Unscheduled Care at Cwm Taf Morgannwg UHB.
                         My main areas of interest are strategic planning and innovation with a particular 
                         emphasis on remote consultation and collaborative multi-disciplinary working. 
                         I am passionate about improving quality of healthcare both from a clinician and 
-                        patient perspective by developing smart, efficient working strategies and utilising 
-                        the latest in point of care testing, remote patient monitoring and machine learning. I have a balanced 
-                        approach to decision making, which is always evidence based. 
-                        By utilising all the available data to guide strategy, I ensure that outcomes are calculated and provide value. 
-                        In addition to clinical skills in primary care and emergency medicine, 
-                        I am proficient in computer programming in Python and have basic HTML skills. 
+                        patient perspective by developing smart, efficient working strategies by utilising the latest digital technology. 
+                        I have a balanced, evidenced based approach to decision making, which has been commended in national peer reviews. 
+                        By utilising all the available data to guide strategy, I ensure that outcomes are calculated and provide value.
+                        <br><br>
+
+                        <h5>Digital leadership</h5>
+                        I have experience in rapid development and deployment of national digital health solutions and was clinical lead 
+                        for the recent 111 Wales / Urgent Care business continuity solution, which went from concept to full national deployment in 2 weeks.
+                        <br><br>
+
+                        <h5>Change managment</h5>
+                        In a previous role, I was clinical lead for the amalgamation of two urgent care services. This required careful staff and public
+                        engagement along with strong leadership and the ability inspire confidence in the incoming team.
+                        <br><br>
+
+                        <h5>Project management</h5>
+                        I am currently the clinical lead for development of a healthboard wide clinical navigation hub. The aim is to get patients to the right place first time, 
+                        between primary and secondary care, by developing clinical pathways. For this project I was chair of the 
+                        pathway development workstream and digital strategy workstream.
+                        I also contributed to the national benchmarking exercise and establishment of national key performance indicators.
+                        <br><br>
+
+                        <h5>Clinical leadership</h5>
+                        As Medical Director, I am the strategic clinical lead for emergency medicine, major trauma and urgent care accross three acute sites.
+                        I have senior line management and budgetary responsibility in unscheduled care.
+                        <br><br>
+
+                        In addition to clinical skills in primary care and emergency medicine.
+                        I am proficient in computer programming in Python and have basic SQL and HTML skills. 
                         I am well versed in the main GP patient management systems, Vision, EMIS, Adastra and Heydoc (private sector).
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+
+            <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Digitsl Skills</h2>
+                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-microsoft"></i></li>
+                    </ul>
+                    <div class="subheading mb-3">Patient Management Systems</div>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col"><img class="flex-column" src="static/emis logo.png" alt="Chania" width="100%"></div>
+                            <div class="col"><img class="flex-column" src="static/Vision 3 logo.png" alt="Chania" width="100%"></div>
+                            <div class="col"><img class="flex-column" src="static/adastra-900x500.png" alt="Chania" width="100%"></div>
+                        </div>
+                    </div>
+                    <div class="subheading mb-3">Data Standards</div>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col"><img class="flex-column" src="static/openehr_logo.png" alt="Chania" width="100%"></div>
+                            <div class="col"><img class="flex-column" src="static/fhir-img.jpg" alt="Chania" width="100%"></div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -141,29 +196,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Skills-->
-            <section class="resume-section" id="skills">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">IT Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-microsoft"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Patient Management Systems</div>
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col"><img class="flex-column" src="static/emis logo.png" alt="Chania" width="100%"></div>
-                            <div class="col"><img class="flex-column" src="static/Vision 3 logo.png" alt="Chania" width="100%"></div>
-                            <div class="col"><img class="flex-column" src="static/adastra-900x500.png" alt="Chania" width="100%"></div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
+
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
@@ -243,6 +276,13 @@
                             </thead>
                             <tbody>
                             <tr>
+                            <td>Cwm Taf Morgannwg UHB</td>
+                            <td>11/22-ongoing</td>
+                            <td>Medical Director</td>
+                            <td>Unscheduled Care</td>
+                            <td>5 sessions</td>
+                            </tr>
+                            <tr>
                             <td>The Medical Centre @ Taff&#39;s Well</td>
                             <td>09/21-ongoing</td>
                             <td>GP Partner</td>
@@ -250,7 +290,7 @@
                             <td>6 sessions</td>
                             </tr>
                             <tr>
-                            <td>Cwm Taf Morganwg Urgent Primary Care</td>
+                            <td>Cwm Taf Morganwg UHB</td>
                             <td>09/20-ongoing</td>
                             <td>Clinical  Director /  Clinical lead  for phone first</td>
                             <td>Urgent Care</td>
