--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         I am a clinician with 15 years experience in the NHS and private sector. I currently hold
                         a senior leadership position as Medical Director for Unscheduled Care at Cwm Taf Morgannwg UHB.
                         My main areas of interest are strategic planning and innovation with a particular 
-                        emphasis on remote consultation and collaborative multi-disciplinary working. 
+                        emphasis on remote consultation and collaborative multi-disciplinary working accross multiple agencies. 
                         I am passionate about improving quality of healthcare both from a clinician and 
                         patient perspective by developing smart, efficient working strategies by utilising the latest digital technology. 
                         I have a balanced, evidenced based approach to decision making, which has been commended in national peer reviews. 
