--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                         <h5>Digital leadership</h5>
                         I have experience in rapid development and deployment of national digital health solutions and was clinical lead 
                         for the recent 111 Wales / Urgent Care business continuity solution, which went from concept to full national deployment in 2 weeks.
+                        I am proficient in computer programming in Python and have basic SQL and HTML skills. 
+                        I am well versed in the main GP patient management systems, Vision, EMIS, Adastra and Heydoc (private sector).
+                        I have a working knowledge of FHIR and openEHR data standards.
                         <br><br>
 
                         <h5>Change managment</h5>
@@ -92,9 +95,12 @@
                         I have senior line management and budgetary responsibility in unscheduled care.
                         <br><br>
 
-                        In addition to clinical skills in primary care and emergency medicine.
-                        I am proficient in computer programming in Python and have basic SQL and HTML skills. 
-                        I am well versed in the main GP patient management systems, Vision, EMIS, Adastra and Heydoc (private sector).
+                        <h5>Vision for Digital Healthcare</h5>
+                        My vision is to have a data driven eletronic health record which enables consistent and controlled develpment of
+                         end to end healthcare solutions. By empowering digital champions within departments to become citizen developers through the 
+                         power of low-code platforms, we can erradicate shadow IT (like random spreadsheets and word documents) and ensure 
+                         that all data meets interoperability standards. This paves the way for accurate performance analysis to deliver value based care.
+
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
