--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
                 <div class="resume-section-content">
                     <h2 class="mb-2">Interests</h2>
                     <ul>
-                        <li>Throughout school I played a lot of rugby, and was hooker for Glantaf and CRICC.</li>
+                        <li>Throughout school I played a lot of rugby, and was hooker for Ysgol Glantaf and CRICC.</li>
                         <li>I enjoy snowboarding.</li> 
-                        <li>I am a keen musician and have played the drums for numerous jazz, rock and metal bands. Have played on 2 national record releases. I toured the UK and performed at outdoor festivals. One of my musical highlights was recording 4 live tracks for BBC Radio 1’s Live lounge at Maida Vale studios.</li>
+                        <li>I am a keen musician and have played the drums for numerous jazz, rock and metal bands. I Have played on 2 national record releases, toured the UK and performed at outdoor festivals. One of my musical highlights was recording 4 live tracks for BBC Radio 1’s Live lounge at Maida Vale studios.</li>
                         <li>I enjoy cooking and going on country walks with my family and dog.</li>
                     </ul>
                 </div>
