--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                         <h5>Introduction</h5>
                         I am a clinician with 15 years experience in the NHS and private sector. I currently hold
                         a senior leadership position as Medical Director for Unscheduled Care at Cwm Taf Morgannwg UHB.
-                        My main areas of interest are strategic planning and innovation with a particular 
-                        emphasis on remote consultation and collaborative multi-disciplinary working accross multiple agencies. 
                         I am passionate about improving quality of healthcare both from a clinician and 
                         patient perspective by developing smart, efficient working strategies by utilising the latest digital technology. 
+                        My main areas of interest are strategic planning and innovation with a particular 
+                        emphasis on remote consultation and collaborative multi-disciplinary working accross multiple agencies. 
                         I have a balanced, evidenced based approach to decision making, which has been commended in national peer reviews. 
                         By utilising all the available data to guide strategy, I ensure that outcomes are calculated and provide value.
                         <br><br>
@@ -80,7 +80,7 @@
 
                         <h5>Change managment</h5>
                         In a previous role, I was clinical lead for the amalgamation of two urgent care services. This required careful staff and public
-                        engagement along with strong leadership and the ability inspire confidence in the incoming team.
+                        engagement along with strong leadership and the ability to inspire confidence in the incoming team.
                         <br><br>
 
                         <h5>Project management</h5>
