--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         I am passionate about improving quality of healthcare both from a clinician and 
                         patient perspective by developing smart, efficient working strategies by utilising the latest digital technology. 
                         My main areas of interest are strategic planning and innovation with a particular 
-                        emphasis on remote consultation and collaborative multi-disciplinary working accross multiple agencies. 
+                        emphasis on remote consultation and collaborative multi-disciplinary working across multiple agencies. 
                         I have a balanced, evidenced based approach to decision making, which has been commended in national peer reviews. 
                         By utilising all the available data to guide strategy, I ensure that outcomes are calculated and provide value.
                         <br><br>
@@ -75,28 +75,28 @@
                         for the recent 111 Wales / Urgent Care business continuity solution, which went from concept to full national deployment in 2 weeks.
                         I am proficient in computer programming in Python and have basic SQL and HTML skills. 
                         I am well versed in the main GP patient management systems, Vision, EMIS, Adastra and Heydoc (private sector).
-                        I have a working knowledge of FHIR and openEHR data standards.
+                        I have a good working knowledge of FHIR and openEHR data standards.
                         <br><br>
 
-                        <h5>Change managment</h5>
+                        <h5>Change management</h5>
                         In a previous role, I was clinical lead for the amalgamation of two urgent care services. This required careful staff and public
                         engagement along with strong leadership and the ability to inspire confidence in the incoming team.
                         <br><br>
 
                         <h5>Project management</h5>
-                        I am currently the clinical lead for development of a healthboard wide clinical navigation hub. The aim is to get patients to the right place first time, 
+                        I am currently the clinical lead for development of a health board wide clinical navigation hub. The aim is to get patients to the right place first time, 
                         between primary and secondary care, by developing clinical pathways. For this project I was chair of the 
                         pathway development workstream and digital strategy workstream.
                         I also contributed to the national benchmarking exercise and establishment of national key performance indicators.
                         <br><br>
 
                         <h5>Clinical leadership</h5>
-                        As Medical Director, I am the strategic clinical lead for emergency medicine, major trauma and urgent care accross three acute sites.
+                        As Medical Director, I am the strategic clinical lead for emergency medicine, major trauma and urgent care across three acute sites.
                         I have senior line management and budgetary responsibility in unscheduled care.
                         <br><br>
 
                         <h5>Vision for Digital Healthcare</h5>
-                        My vision is to have a data driven eletronic health record which enables consistent and controlled develpment of
+                        My vision is to have a data driven electronic health record which enables consistent and controlled develpment of
                          end to end healthcare solutions. By empowering digital champions within departments to become citizen developers through the 
                          power of low-code platforms, we can erradicate shadow IT (like random spreadsheets and word documents) and ensure 
                          that all data meets interoperability standards. This paves the way for accurate performance analysis to deliver value based care.
