--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <p class="lead mb-5">
                         <h5>Introduction</h5>
                         I am a clinician with 15 years experience in the NHS and private sector. I currently hold
-                        a senior leadership position as Medical Director for Unscheduled Care at Cwm Taf Morgannwg UHB.
+                        a senior leadership position as Medical Director for Unscheduled Care at Cwm Taf Morgannwg UHB in South Wales.
                         I am passionate about improving quality of healthcare both from a clinician and 
                         patient perspective by developing smart, efficient working strategies by utilising the latest digital technology. 
                         My main areas of interest are strategic planning and innovation with a particular 
