--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
                         <br><br>
 
                         <h5>Clinical leadership</h5>
-                        As Medical Director, I am the strategic clinical lead for emergency medicine, major trauma and urgent care across three acute sites.
-                        I have senior line management and budgetary responsibility in unscheduled care.
+                        As Medical Director, I am the strategic clinical lead for emergency medicine, major trauma, urgent care and critical care across three acute sites, serving
+                        population of 500,000.
+                        I have senior line management and budgetary responsibility in unscheduled care, reporting to the executive medical director.
                         <br><br>
 
                         <h5>Vision for Digital Healthcare</h5>
