--- a/index-clinical.html
+++ b/index-clinical.html
@@ -65,23 +65,35 @@
                         I am passionate about improving quality of healthcare both from a clinician and 
                         patient perspective by developing smart, efficient working strategies by utilising the latest digital technology. 
                         My main areas of interest are strategic planning and innovation with a particular 
-                        emphasis on smart digital transformation and collaborative multi-agency working in an integrated care structure. 
+                        emphasis on digital transformation and collaborative multi-agency working in an integrated care structure. 
                         I have a balanced, evidenced based approach to decision making, which has been commended in national peer reviews. 
                         By utilising all the available data to guide strategy, I ensure that outcomes are calculated and provide value.
+                        <br><br>
+
+                        Having undertaken periods of post-foundation experience in ENT / head and neck surgery, general surgery, histopathology,
+                        paediatrics, emergency medicine and general practice, and the qualifications of MRCS, DipRCPath and MRCGP, I have a
+                        broad, first hand experience profile in primary / community care, secondary care and diagnostics. This varied practical experience
+                        helps me be a credible, compassionate leader.
                         <br><br>
 
                         <h5>Digital leadership</h5>
                         I have experience in rapid development and deployment of national digital health solutions and was clinical lead 
                         for the recent 111 Wales / Urgent Care business continuity solution, which went from concept to full national deployment in 2 weeks.
-                        I am proficient in computer programming in Python and have basic SQL and HTML skills. 
-                        I am well versed in the main GP patient management systems, Vision, EMIS, Adastra and Heydoc (private sector).
+                        I am proficient in computer programming in Python and have basic SQL and HTML skills.
                         I have a good working knowledge of FHIR and openEHR data standards.
                         <br><br>
 
                         <h5>Change management</h5>
+                        I am involved as a senior clinical leader in the reconfiguration of services from an integrated locality group structure to a care 
+                        group structure across three localities.<br><br>
                         In a previous role, I was clinical lead for the amalgamation of two urgent care services. This required careful staff and public
-                        engagement along with strong leadership and the ability to inspire confidence in the incoming team.
+                        engagement along with strong leadership and the ability to inspire confidence in the incoming team.<br><br>
                         <br><br>
+                        Introduction of 111
+                        I was the health board clinical lead for the introduction of 111 to urgent primary care, which had a huge impact on the department's workflow.
+                        My ability to work compassionately with the medical and allied workforce led to the successful rollout of 111.
+                        
+                        These major organisational change projects have required a good understanding of OCP and TUPE.
 
                         <h5>Project management</h5>
                         I am currently the clinical lead for development of a health board wide clinical navigation hub. The aim is to get patients to the right place first time, 
@@ -92,15 +104,16 @@
 
                         <h5>Clinical leadership</h5>
                         As Medical Director, I am the strategic clinical lead for emergency medicine, major trauma, urgent care and critical care across three acute sites, serving
-                        population of 500,000.
+                        a population of 500,000.<br>
                         I have senior line management and budgetary responsibility in unscheduled care, reporting to the executive medical director.
                         <br><br>
 
-                        <h5>Vision for Digital Healthcare</h5>
-                        My vision is to have a data driven electronic health record which enables consistent and controlled develpment of
-                         end to end healthcare solutions. By empowering digital champions within departments to become citizen developers through the 
-                         power of low-code platforms, we can erradicate shadow IT (like random spreadsheets and word documents) and ensure 
-                         that all data meets interoperability standards. This paves the way for accurate performance analysis to deliver value based care.
+                        <h5>Vision for Healthcare</h5>
+                        My vision is to have an integrated care structure with seamless transfer of care between primary, secondary and community care.
+                        This requires a data driven approach to strategic development with robust modelling to ensure value as well as quality and efficiency. 
+                        Data interoperability and system integration is essential to achieve this and key to digital transformation of manual processes.
+                        This cannot be achieved without robust and prescriptive organisational values and internal professional standards. As a compassionate
+                        leader, I will inspire the organisation to work collaboratively and drive towards an improved and sustainable health service.
 
                     </p>
                     <div class="social-icons">
