--- a/index.html
+++ b/index.html
@@ -60,61 +60,26 @@
                     </div>
                     <p class="lead mb-5">
                         <h5>Introduction</h5>
-                        I am a clinician with 15 years experience in the NHS and private sector. I currently hold
-                        a senior leadership position as Medical Director for Unscheduled Care at Cwm Taf Morgannwg UHB in South Wales.
-                        I am passionate about improving quality of healthcare both from a clinician and 
-                        patient perspective by developing smart, efficient working strategies by utilising the latest digital technology. 
-                        My main areas of interest are strategic planning and innovation with a particular 
-                        emphasis on digital transformation and collaborative multi-agency working in an integrated care structure. 
-                        I have a balanced, evidenced based approach to decision making, which has been commended in national peer reviews. 
-                        By utilising all the available data to guide strategy, I ensure that outcomes are calculated and provide value.
-                        <br><br>
-
-                        Having undertaken periods of post-foundation experience in ENT / head and neck surgery, general surgery, histopathology,
-                        paediatrics, emergency medicine and general practice, and the qualifications of MRCS, DipRCPath and MRCGP, I have a
-                        broad, first hand experience profile in primary / community care, secondary care and diagnostics. This varied practical experience
-                        helps me be a credible, compassionate leader.
-                        <br><br>
-
-                        <h5>Digital leadership</h5>
-                        I have experience in rapid development and deployment of national digital health solutions and was clinical lead 
-                        for the recent 111 Wales / Urgent Care business continuity solution, which went from concept to full national deployment in 2 weeks.
-                        I am proficient in computer programming in Python and have basic SQL and HTML skills.
-                        I have a good working knowledge of FHIR and openEHR data standards.
+                        Experienced clinician with 15 years in NHS and private sector, currently serving as Medical Director for Unscheduled Care at Cwm Taf Morgannwg UHB. Passionate about enhancing healthcare quality via smart, digital strategies. Skilled in strategic planning, innovation, and fostering collaborative multi-agency efforts for integrated care. Recognized for evidence-based decision-making and comprehensive expertise spanning primary, secondary, and diagnostic care.
                         <br><br>
 
                         <h5>Change management</h5>
-                        I am involved as a senior clinical leader in the reconfiguration of services from an integrated locality group structure to a care 
-                        group structure across three localities.<br><br>
-                        In a previous role, I was clinical lead for the amalgamation of two urgent care services. This required careful staff and public
-                        engagement along with strong leadership and the ability to inspire confidence in the incoming team.<br><br>
+                        Demonstrated proficiency in change management within the NHS, serving as a clinical lead for the amalgamation of two urgent care services. Successfully engaged staff and the public, showcasing strong leadership and inspiring confidence in the incoming team. Additionally, led the introduction of 111 to urgent primary care, optimizing departmental workflow.
                         <br><br>
-                        Introduction of 111
-                        I was the health board clinical lead for the introduction of 111 to urgent primary care, which had a huge impact on the department's workflow.
-                        My ability to work compassionately with the medical and allied workforce led to the successful rollout of 111.
                         
-                        These major organisational change projects have required a good understanding of OCP and TUPE.
-
                         <h5>Project management</h5>
-                        I am currently the clinical lead for development of a health board wide clinical navigation hub. The aim is to get patients to the right place first time, 
-                        between primary and secondary care, by developing clinical pathways. For this project I was chair of the 
-                        pathway development workstream and digital strategy workstream.
-                        I also contributed to the national benchmarking exercise and establishment of national key performance indicators.
+                        Currently serving as the clinical lead for a health board's clinical navigation hub, focused on optimizing patient pathways between primary and secondary care. Chaired pathway development and digital strategy workstreams, contributing to national benchmarking and establishing key performance indicators for enhanced healthcare delivery and patient outcomes
                         <br><br>
 
                         <h5>Clinical leadership</h5>
-                        As Medical Director, I am the strategic clinical lead for emergency medicine, major trauma, urgent care and critical care across three acute sites, serving
-                        a population of 500,000.<br>
-                        I have senior line management and budgetary responsibility in unscheduled care, reporting to the executive medical director.
+                        As a Medical Director, I provide strategic clinical leadership for emergency medicine, major trauma, urgent care, and acute medicine across three acute sites, catering to a population of 500,000. I manage senior line responsibilities and budgets in unscheduled care, reporting directly to the executive medical director.
                         <br><br>
 
+                        <h5>Digital leadership</h5>
+                        Experienced in rapid national digital health solutions, including leading the development of 111 Wales/Urgent Care continuity solution. Proficient in Python, with basic SQL/HTML skills and familiarity with FHIR/openEHR data standards.
+                        
                         <h5>Vision for Healthcare</h5>
-                        My vision is to have an integrated care structure with seamless transfer of care between primary, secondary and community care.
-                        This requires a data driven approach to strategic development with robust modelling to ensure value as well as quality and efficiency. 
-                        Data interoperability and system integration is essential to achieve this and key to digital transformation of manual processes.
-                        This cannot be achieved without robust and prescriptive organisational values and internal professional standards. As a compassionate
-                        leader, I will inspire the organisation to work collaboratively and drive towards an improved and sustainable health service.
-
+                        My vision for the future of healthcare entails an integrated care framework enabling seamless transitions among primary, secondary, and community care. Embracing a data-driven strategy with robust modeling ensures both value and efficiency. Data interoperability and system integration are pivotal for digital transformation, supported by strong organizational values. As a compassionate leader, I inspire collaboration for an enhanced and sustainable health service.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
